# Evidra

./: .gitignore  README.md  index.html
docs/superpowers/plans/: 2026-06-26-rag-eval-assistant.md  2026-06-26-rag-strategy-lab.md
docs/superpowers/specs/: 2026-06-26-rag-langfuse-design.md
rag-eval-assistant/: .gitignore  README.md
rag-eval-assistant/backend/: .env.example  pyproject.toml
rag-eval-assistant/backend/app/: __init__.py  settings.py
rag-eval-assistant/backend/app/api/: __init__.py  main.py
rag-eval-assistant/backend/app/evals/: __init__.py  runner.py
rag-eval-assistant/backend/app/rag/: __init__.py  pipeline.py  store.py  text.py
rag-eval-assistant/backend/app/schemas/: __init__.py  models.py
rag-eval-assistant/backend/app/services/: __init__.py  ingestion.py  langfuse_trace.py  model_providers.py  runtime_config.py
rag-eval-assistant/backend/tests/: test_api.py  test_evaluation_runner.py  test_frontend_security.py  test_ingestion_service.py  test_model_providers.py  test_models_and_settings.py  test_pipeline_and_trace.py  test_settings.py  test_store_retrieval.py  test_text_chunking.py
rag-eval-assistant/data/eval_sets/: demo.json
rag-eval-assistant/docs/: demo.md  interview-guide.md  sample-handbook.md
rag-eval-assistant/frontend/: app.js  index.html  styles.css
